changed icon organization
made the images img-responsive and took away link text. Link is on pic
right now and put three images in each row. Begun to start on the text
input fields

--- a/styles/twitch.css
+++ b/styles/twitch.css
@@ -61,3 +61,14 @@ p, li {
 .navbar .nav .dropdown li a:hover  {
   background-color: #666;
 }
+
+/*CONTENT CONTAINER*/
+.content {
+  background-color: rgba(40, 40, 40, 0.7);
+  border-color: #222;
+}
+
+.users {
+  border-bottom: 1px solid #FFF;
+  border-radius: 15%;
+}
