Added search and addUser functionality
Users can now look up streamers and add new streamers to their list.
Next up is using cookies to remember these changes?

--- a/styles/twitch.css
+++ b/styles/twitch.css
@@ -70,5 +70,17 @@ p, li {
 
 .users {
   border-bottom: 1px solid #FFF;
-  border-radius: 15%;
+}
+
+.content p {
+  color: #FFF;
+}
+
+#searchUser, #addUser, #removeUser {
+  background-color: #222;
+  color: #FFF;
+}
+
+#searchUser:focus, #addUser:focus, #removeUser:focus {
+  outline-color: #FFF;
 }
