--- a/styles/contact.css
+++ b/styles/contact.css
@@ -43,13 +43,16 @@ p, li {
 
 .navbar-brand {
   cursor: default;
+  outline: none;
 }
 
 .navbar .nav li a, .navbar .navbar-brand,.navbar .nav li a:visited, .navbar .navbar-brand:visited {
   color: #FFF;
+  outline: none;
 }
 .navbar .nav li a:hover, .navbar .navbar-brand:hover{
   color: #BBB;
+  outline: none;
 }
 
 .navbar .nav li.dropdown.open > a:focus{
