--- a/styles/wiki.css
+++ b/styles/wiki.css
@@ -9,7 +9,7 @@ body {
     background-color: #000;
 }
 
-p, h1 {
+p, h1, h2, h3, h4, h5, blockquote, article, cite {
     color: #000;
 }
 h1 {
@@ -20,6 +20,9 @@ p, li {
   font-family: 'Open Sans', sans-serif;
 }
 
+a, a:hover, a:visited, a:focus {
+  text-decoration: none;
+}
 .button:focus, .button:active {
   outline: none !important;
 }
@@ -62,4 +65,17 @@ p, li {
 }
 .navbar .nav .dropdown li a:hover  {
   background-color: #666;
+}
+
+ul {
+  list-style-type: none;
+}
+
+/*CONTENT STYLES*/
+.article {
+  background-color: #222;
+}
+
+.article p {
+  color: #FFF;
 }
