--- a/styles/wiki.css
+++ b/styles/wiki.css
@@ -4,38 +4,40 @@
     display: none;
   }
 }
-
 body {
-    background-color: #000;
+  background-color: #212C48;
 }
 
-p, h1, h2, h3, h4, h5, blockquote, article, cite {
-    color: #000;
+p, h1, h2, h3, h4, h5, article, li {
+  color: #444D65;
 }
-h1 {
+h1, h2, h3, h4, h5 {
   font-family: 'Abril Fatface', cursive;
 }
 
-p, li {
+p, li, article {
   font-family: 'Open Sans', sans-serif;
 }
 
-a, a:hover, a:visited, a:focus {
-  text-decoration: none;
-}
 .button:focus, .button:active {
   outline: none !important;
 }
 
-.button {
+.button, .button:focus {
   font-family: 'Ubuntu', sans-serif;
+  background-color: #444D65;
+  color: #000;
+}
+
+.button:hover {
+  color: #0A142E;
 }
 
 /*NAVBAR STYLES*/
 .container-fluid, .navbar {
-  background-color: rgb(80, 80, 80);
+  background-color: #0A142E;
+  border-color: #444D65;
 }
-
 .navbar {
   border-top: none;
   border-left: none;
@@ -52,30 +54,40 @@ a, a:hover, a:visited, a:focus {
   color: #FFF;
   outline: none;
 }
-.navbar .nav li a:hover, .navbar .navbar-brand:hover{
-  color: #BBB;
+.navbar .nav li a:hover, .navbar .navbar-brand:hover, .navbar .nav li a::after, .navbar .nav li a:active{
+  color: #CCC;
   outline: none;
 }
 
 .navbar .nav li.dropdown.open > a:focus{
-  background-color: #999;
+  background-color: #364364;
 }
 .navbar .nav .dropdown ul{
-  background-color: #000;
+  background-color: #031444;
 }
-.navbar .nav .dropdown li a:hover  {
-  background-color: #666;
+.navbar .nav .dropdown li a:hover {
+  background-color: #061F5F;
 }
-
 ul {
   list-style-type: none;
 }
 
 /*CONTENT STYLES*/
 .article {
-  background-color: #222;
+  background-color: #16213E;
+  border-color: #444D65;
 }
 
 .article p {
   color: #FFF;
+}
+
+.search {
+  background-color: #16213E;
+  color: #FFF;
+  border-color: #444D65;
+}
+
+.article a:hover, .article a:visited,.article a:focus {
+  text-decoration: none;
 }
