Began todo portion of wanikani app
I created a space to manage todo items. Still need to add functionality
for the user to input their own tasks, but I have a functional default
task for the next wanikani review which updates.

--- a/styles/twitch.css
+++ b/styles/twitch.css
@@ -75,12 +75,16 @@ p, li, article {
 
 /*CONTENT CONTAINER*/
 .content {
+  padding-top: 10px;
   background-color: #16213E;
-  border-color: #444D65;
+  border: 1px solid #444D65;
+  border-radius: 10px;
 }
 
 .userList {
   background-color: #16213E;
+  border-radius: 10px;
+  border: 1px solid #444D65;
 }
 .content p {
   color: #FFF;
