Drag and drop added for desktop
Added drag and drop functionality for the items in my wanikani todo app.
I also began adding the functionality for new user-defined events.
Additionally, I took out all empty divs that were used for formatting in
lieu of a col offset.

--- a/styles/wanikani.css
+++ b/styles/wanikani.css
@@ -83,10 +83,15 @@ ul {
   background-color: #16213E;
   border-radius: 10px;
   border: 1px dashed #444D65;
+  margin: 5px;
 }
 
-#tasks {
+#drag {
   background-color: #16213E;
   border-radius: 10px;
   border: 1px solid #444D65;
+}
+
+#tasks, #finished {
+  padding-bottom: 50px;
 }
