User can add events
Users are now able to add events and drag and drop them on desktop
browsers. Users can also group tasks together and move them as a group.

--- a/styles/twitch.css
+++ b/styles/twitch.css
@@ -99,3 +99,7 @@ p, li, article {
 .searchUser:focus, .addUser:focus, .removeUser:focus {
   outline-color: #444D65;
 }
+
+a:hover, a:visited, a:focus {
+  text-decoration: none;
+}
