--- a/styles/wanikani.css
+++ b/styles/wanikani.css
@@ -16,6 +16,13 @@ h1, h2, h3, h4, h5 {
   font-family: 'Abril Fatface', cursive;
 }
 
+h2 {
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
 p, li, article {
   font-family: 'Open Sans', sans-serif;
 }
