--- a/styles/quotes.css
+++ b/styles/quotes.css
@@ -9,7 +9,7 @@ body {
 }
 
 p, h1, h2, h3, h4, h5, article, li {
-  color: #444D65;
+  color: #FFF;
 }
 h1, h2, h3, h4, h5 {
   font-family: 'Abril Fatface', cursive;
