--- a/styles/main.css
+++ b/styles/main.css
@@ -10,7 +10,7 @@ body {
   background-color: #212C48;
 }
 
-p, h1, h2, h3, h4, h5, article, li {
+p, h1, h2, h3, h4, h5, article, li, figcaption {
   color: #FFF;
 }
 h1, h2, h3, h4, h5 {
